Revert "Fixed spacing on taskList"
This reverts commit 7c6be4ba3de82561b14716c96c8d29329de104fc.

--- a/frontend/react-app/src/css/TaskList.css
+++ b/frontend/react-app/src/css/TaskList.css
@@ -1,7 +1,6 @@
-.containerTaskList{
+.container{
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
 }
 table{
     width: 100%;
